# fastapi-nextjs-starter

./: .gitignore  README.md  compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: Dockerfile  package-lock.json
